# tbc

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: dependencies.cmake  discoverTests.cmake  discoverTestsAndWriteScript.cmake  discover_tests.cmake  discover_tests_and_write_script.cmake  findDependencies.cmake  generateLexer.cmake  generate_lexer.cmake
documentation/: instruction.md  style.md
html/: tbc.html
include/algorithm/: Execute.hpp
include/imr/: instruction.hpp  operand.hpp
include/input/: Lexer.hpp  Parser.hpp  Token.hpp  lexer.hpp  token.hpp
include/representation/: Context.hpp  Expression.hpp  Index.hpp  Instruction.hpp  Operand.hpp  Registers.hpp  Stack.hpp  Value.hpp
include/utility/: Arithmetic.hpp  Error.hpp  error.hpp
source/: CMakeLists.txt  main.c++  tbcMain.cpp
source/algorithm/: Execute.cpp
source/input/: Lexer.cpp  Lexer.re2c  Parser.cpp  Token.cpp  UnicodeCategories.re  lexer.re2c  token.cpp
test/: CMakeLists.txt
test/include/: UnicodeCategories.txt  unicode_categories.txt
test/source/: lexer.cpp  main.cpp  testLexer.cpp  testMain.cpp
